--- a/index.html
+++ b/index.html
@@ -130,5 +130,40 @@
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Wondershare Filmora X 14.0.11.9772 x64 Multilíngue + Effects Pack.txt')">
         📁 Wondershare Filmora X 14.0.11.9772 x64 Multilíngue + Effects Pack
     </div>
+	
+	
+	<!-- -------------------------- -->
+	
+	<div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Driver Easy Professional 6.1.1.29776.txt')">
+        📁 Driver Easy Professional 6.1.1.29776
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/MetaProducts Offline Explorer Enterprise 8.6.0.4988 + Offline Browser.txt')">
+        📁 MetaProducts Offline Explorer Enterprise 8.6.0.4988 + Offline Browser
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Adobe After Effects 2025 v25.0.1 Windows + Plugins Multilíngue x64.txt')">
+        📁 Adobe After Effects 2025 v25.0.1 Windows + Plugins Multilíngue x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Revo Uninstaller Pro 5.3.2 Multilíngue.txt')">
+        📁 Revo Uninstaller Pro 5.3.2 Multilíngue
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Adobe Speech to Text for Premiere Pro 2025 v2.1.6 Multilíngue x64.txt')">
+        📁 Adobe Speech to Text for Premiere Pro 2025 v2.1.6 Multilíngue x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/PotPlayer 1.7.22344 Multilingual x64.txt')">
+        📁 PotPlayer 1.7.22344 Multilingual x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Password Depot 17.2.5 Multilingual x64.txt')">
+        📁 Password Depot 17.2.5 Multilingual x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Advanced Uninstaller PRO 13.27.0.69.txt')">
+        📁 Advanced Uninstaller PRO 13.27.0.69
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Nuance Dragon Professional 16.10.200.044 Win.txt)">
+        📁 Nuance Dragon Professional 16.10.200.044 Win
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/ABBYY FineReader Corporate 16.0.14.7295 Win Multilingual Corporation.txt')">
+        📁 ABBYY FineReader Corporate 16.0.14.7295 Win Multilingual Corporation
+    </div>
+    
 </body>
 </html>
