--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
 	
 	
-	<!-- -------------------------- -->
+	<!-- -------------------------- 2 ETAPA -->
 	
 	<div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Driver Easy Professional 6.1.1.29776.txt')">
         📁 Driver Easy Professional 6.1.1.29776
@@ -163,6 +163,40 @@
     </div>
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/ABBYY FineReader Corporate 16.0.14.7295 Win Multilingual Corporation.txt')">
         📁 ABBYY FineReader Corporate 16.0.14.7295 Win Multilingual Corporation
+    </div>
+	
+	<!-- -------------------------- 3 ETAPA -->
+	
+	
+	<div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Wondershare Repairit 6.0.6.11 Multilingual x64.txt')">
+        📁 Wondershare Repairit 6.0.6.11 Multilingual x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/CCleaner Professional Plus 6.30 x64 Multilingual.txt')">
+        📁 CCleaner Professional Plus 6.30 x64 Multilingual
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Adobe Illustrator 2025 v29.1 Multilingual x64.txt')">
+        📁 Adobe Illustrator 2025 v29.1 Multilingual x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/IObit Driver Booster Pro 12.1.0.469 Multilingual.txt')">
+        📁 IObit Driver Booster Pro 12.1.0.469 Multilingual
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Wondershare PDFelement Professional 11.3.0.3229 Win Multilingual.txt')">
+        📁 Wondershare PDFelement Professional 11.3.0.3229 Win Multilingual
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Windows 10 Pro 22H2 build 19045.5011 Pré-ativado Multilingual Agosto 2024 x64.txt')">
+        📁 Windows 10 Pro 22H2 build 19045.5011 Pré-ativado Multilingual Agosto 2024 x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/DriverMax Pro 16.17.0.16 Multilingual.txt')">
+        📁 DriverMax Pro 16.17.0.16 Multilingual
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/MiniTool Power Data Recovery All Edition 12.2 + WinPE x64 Multilingual.txt')">
+        📁 MiniTool Power Data Recovery All Edition 12.2 + WinPE x64 Multilingual
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Adobe Substance 3D Sampler v4.5.2.5909 x64.txt)">
+        📁 Adobe Substance 3D Sampler v4.5.2.5909 x64
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Epubor Ultimate Converter 3.0.16.296 Win Multilingual.txt')">
+        📁 Epubor Ultimate Converter 3.0.16.296 Win Multilingual
     </div>
     
 </body>
