--- a/index.html
+++ b/index.html
@@ -252,6 +252,23 @@
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Wondershare UniConverter 16.0.2.72 Win Multilingual.txt')">
         📁 Wondershare UniConverter 16.0.2.72 Win Multilingual
     </div>
+	
+	
+	<!-- -------------------------- 5 ETAPA -->
+	
+	 <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/YT Downloader 9.11.5 Multilingual.txt')">
+        📁 YT Downloader 9.11.5 Multilingual
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Yamicsoft Windows Manager 2.0.8.txt)">
+        📁 Yamicsoft Windows Manager 2.0.8
+    </div>
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/EaseUS Partition Master 19.2.0.20241118.txt')">
+        📁 EaseUS Partition Master 19.2.0.20241118
+    </div>
+	
+	
+	
+	
     
 </body>
 </html>
