--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/VMware Workstation Pro 17.6.1.24319023 Win.txt')">
         📁 VMware Workstation Pro 17.6.1.24319023 Win
     </div>
-    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Windows 11 Pro 24H2 Build 26100.1742 Final (sem necessidade de TPM) pré-ativado multilíngue x64.txt)">
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Windows 11 Pro 24H2 Build 26100.1742 Final (sem necessidade de TPM) pré-ativado multilíngue x64.txt')">
         📁 Windows 11 Enterprise 24H2 Build 26100.1742 Final (sem necessidade de TPM) pré-ativado multilíngue x64
     </div>
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/windows 11.txt')">
@@ -177,7 +177,7 @@
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Advanced Uninstaller PRO 13.27.0.69.txt')">
         📁 Advanced Uninstaller PRO 13.27.0.69
     </div>
-    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Nuance Dragon Professional 16.10.200.044 Win.txt)">
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Nuance Dragon Professional 16.10.200.044 Win.txt')">
         📁 Nuance Dragon Professional 16.10.200.044 Win
     </div>
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/ABBYY FineReader Corporate 16.0.14.7295 Win Multilingual Corporation.txt')">
@@ -211,7 +211,7 @@
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/MiniTool Power Data Recovery All Edition 12.2 + WinPE x64 Multilingual.txt')">
         📁 MiniTool Power Data Recovery All Edition 12.2 + WinPE x64 Multilingual
     </div>
-    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Adobe Substance 3D Sampler v4.5.2.5909 x64.txt)">
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Adobe Substance 3D Sampler v4.5.2.5909 x64.txt')">
         📁 Adobe Substance 3D Sampler v4.5.2.5909 x64
     </div>
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Epubor Ultimate Converter 3.0.16.296 Win Multilingual.txt')">
@@ -246,7 +246,7 @@
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Sante DICOM Viewer Pro 14.0.15.txt')">
         📁 Sante DICOM Viewer Pro 14.0.15
     </div>
-    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Windows 10 22H2 build 19045.5131 Business Edition novembro 2024 MSDN x64.txt)">
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Windows 10 22H2 build 19045.5131 Business Edition novembro 2024 MSDN x64.txt')">
         📁 Windows 10 22H2 build 19045.5131 Business Edition novembro 2024 MSDN x64
     </div>
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Wondershare UniConverter 16.0.2.72 Win Multilingual.txt')">
@@ -256,10 +256,10 @@
 	
 	<!-- -------------------------- 5 ETAPA -->
 	
-	 <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/YT Downloader 9.11.5 Multilingual.txt')">
+	<div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/YT Downloader 9.11.5 Multilingual.txt')">
         📁 YT Downloader 9.11.5 Multilingual
     </div>
-    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Yamicsoft Windows Manager 2.0.8.txt)">
+    <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/Yamicsoft Windows Manager 2.0.8.txt')">
         📁 Yamicsoft Windows Manager 2.0.8
     </div>
     <div class="folder" onclick="downloadFile('https://baixetudopcwindows.github.io/clubewin/EaseUS Partition Master 19.2.0.20241118.txt')">
