--- a/redirBaixando.html
+++ b/redirBaixando.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <title>Redirecting...</title> -->
     <script>	
-        window.location.href = "https://solucionarmais.com.br/bcin/cliquesbbcin/cont_fora.php";
+        window.location.href = "https://baixetudopcwindows.github.io/clubewin/AbrirDownload.zip";
     </script>
 </head>
 <body>
